deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afm-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: afm-front
  template:
    metadata:
      labels:
        app: afm-front
    spec:

      containers:
      - name: afm-front
        image: ${CONTAINER_REGISTRY}/afm-front
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: afm-front
  name: afm-front
spec:
  ports:
  - port: 80
    nodePort: 32723
  selector:
    app: afm-front
  type: LoadBalancer
