kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shinsei-manager-front-vue2
spec:
    replicas: 1
    selector:
        matchLabels:
            app: shinsei-manager-front-vue2
    template:
        metadata:
            labels:
                app: shinsei-manager-front-vue2
        spec:
            containers:
                - name: shinsei-manager-front-vue2
                  image: ${CONTAINER_IMAGE_TAGGED}
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: shinsei-manager-front-vue2
spec:
    type: NodePort
    selector:
        app: shinsei-manager-front-vue2
    ports:
        - port: 80
          nodePort: 32725
