kubernetes_manifest_staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME_STAGING}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}
    spec:
      containers:
        - name: ${APPLICATION_NAME_STAGING}
          image: ${CONTAINER_IMAGE_TAGGED_STAGING}
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME_STAGING}
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME_STAGING}
spec:
  rules:
    - host: shinsei-staging.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME_STAGING}
                port:
                  number: 80

# --------
# PDF deployment
# --------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME_STAGING}-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}-pdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}-pdf
    spec:
      containers:
        - name: ${APPLICATION_NAME_STAGING}-pdf
          image: ${CONTAINER_IMAGE_TAGGED_STAGING}
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME_STAGING}-pdf
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}-pdf
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME_STAGING}-pdf
spec:
  rules:
    - host: shinsei-pdf-staging.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME_STAGING}-pdf
                port:
                  number: 80
# --------
# PDF Toggle deployment
# --------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME_STAGING}-pdf-toggle
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}-pdf-toggle
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}-pdf-toggle
    spec:
      containers:
        - name: ${APPLICATION_NAME_STAGING}-pdf-toggle
          image: ${CONTAINER_IMAGE_TAGGED_STAGING}
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME_STAGING}-pdf-toggle
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ${APPLICATION_NAME_STAGING}-pdf-toggle
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME_STAGING}-pdf-toggle
spec:
  rules:
    - host: shinsei-pdf-toggle-staging.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME_STAGING}-pdf-toggle
                port:
                  number: 80
